Fixed skills titles overlapping on screen reduce

--- a/css/formatting_styles.css
+++ b/css/formatting_styles.css
@@ -2,11 +2,6 @@
     margin-right: 15px;
 }
 
-/* img {
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
-} */
-
 /* Feature Icon */
 
 .feature-icon {
